--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -513,18 +513,18 @@ button{
   justify-self: center;
 }
 
-/*=============== NEW ARRIVALS ===============*/
-.new__container{
+/*=============== howtobuy ===============*/
+.howtobuy__container{
   padding-top: 1rem;
 }
 
-.new__img{
+.howtobuy__img{
   width: 120px;
   margin-bottom: var(--mb-0-5);
   transition: .3s;
 }
 
-.new__content{
+.howtobuy__content{
   position: relative;
   background: var(--container-color);
   width: 242px;
@@ -534,7 +534,7 @@ button{
   overflow: hidden;
 }
 
-.new__tag{
+.howtobuy__tag{
   position: absolute;
   top: 8%;
   left: 8%;
@@ -545,36 +545,36 @@ button{
   border-radius: .25rem;
 }
 
-.new__title{
+.howtobuy__title{
   font-size: var(--normal-font-size);
   font-weight: var(--font-medium);
 }
 
-.new__subtitle{
+.howtobuy__subtitle{
   display: block;
   font-size: var(--small-font-size);
   margin-bottom: var(--mb-0-5);
 }
 
-.new__prices{
+.howtobuy__prices{
   display: inline-flex;
   align-items: center;
   column-gap: .5rem;
 }
 
-.new__price{
+.howtobuy__price{
   font-weight: var(--font-medium);
   color: var(--title-color);
 }
 
-.new__discount{
+.howtobuy__discount{
   color: var(--first-color);
   font-size: var(--smaller-font-size);
   text-decoration: line-through;
   font-weight: var(--font-medium);
 }
 
-.new__button{
+.howtobuy__button{
   display: inline-flex;
   padding: .5rem;
   border-radius: .25rem .25rem .75rem .25rem;
@@ -583,15 +583,15 @@ button{
   right: -3rem;
 }
 
-.new__icon{
+.howtobuy__icon{
   font-size: 1.25rem;
 }
 
-.new__content:hover .new__img{
+.howtobuy__content:hover .howtobuy__img{
   transform: translateY(-.5rem);
 }
 
-.new__content:hover .new__button{
+.howtobuy__content:hover .howtobuy__button{
   right: 0;
 }
 
@@ -968,19 +968,19 @@ button{
     column-gap: 7rem;
   }
 
-  .new__content{
+  .howtobuy__content{
     width: 310px;
     border-radius: 1rem;
     padding: 2rem 0;
   }
-  .new__img{
+  .howtobuy__img{
     width: 150px;
   }
-  .new__img,
-  .new__subtitle{
+  .howtobuy__img,
+  .howtobuy__subtitle{
     margin-bottom: var(--mb-1);
   }
-  .new__title{
+  .howtobuy__title{
     font-size: var(--h3-font-size);
   }
 
