--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -6,9 +6,9 @@
 @import 'components/buttons';
 @import 'components/category';
 @import 'components/about';
-@import 'components/trick';
+@import 'components/bounceeenomics';
 @import 'components/discount';
-@import 'components/new';
+@import 'components/howtobuy';
 @import 'components/newsletter';
 @import 'components/footer';
 @import 'components/scroll';
