--- a/assets/scss/components/_breakpoints.scss
+++ b/assets/scss/components/_breakpoints.scss
@@ -238,7 +238,7 @@
         column-gap: 7rem;
     }
 
-    .new{
+    .howtobuy{
         &__content{
             width: 310px;
             border-radius: 1rem;
